// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stats/> componentDidMount() should create a notification (server error) when fetching stats fails 1`] = `
Array [
  Array [
    Object {
      "status": "error",
      "title": "Invalid filters",
    },
  ],
  Array [
    Object {
      "status": "error",
      "title": "Invalid filters",
    },
  ],
  Array [
    Object {
      "status": "error",
      "title": "Invalid filters",
    },
  ],
  Array [
    Object {
      "status": "error",
      "title": "Invalid filters",
    },
  ],
]
`;

exports[`<Stats/> componentDidMount() should create a notification (server error) when fetching stats fails: stats should be marked as not loading 1`] = `
Object {
  "loadings": Immutable.Map {
    "overview": false,
    "support-volume": false,
    "resolution-time": false,
    "first-response-time": false,
  },
  "stats": Immutable.Map {},
}
`;

exports[`<Stats/> componentDidMount() should create a notification (unknown error) when fetching stats fails 1`] = `
Array [
  Array [
    Object {
      "status": "error",
      "title": "Failed to get statistics. Please retry in a few seconds.",
    },
  ],
  Array [
    Object {
      "status": "error",
      "title": "Failed to get statistics. Please retry in a few seconds.",
    },
  ],
  Array [
    Object {
      "status": "error",
      "title": "Failed to get statistics. Please retry in a few seconds.",
    },
  ],
  Array [
    Object {
      "status": "error",
      "title": "Failed to get statistics. Please retry in a few seconds.",
    },
  ],
]
`;

exports[`<Stats/> componentDidMount() should create a notification (unknown error) when fetching stats fails: stats should be marked as not loading 1`] = `
Object {
  "loadings": Immutable.Map {
    "overview": false,
    "support-volume": false,
    "resolution-time": false,
    "first-response-time": false,
  },
  "stats": Immutable.Map {},
}
`;

exports[`<Stats/> componentDidMount() should fetch stats and populate the state: should contain data of stats and be marked as not loading 1`] = `
Object {
  "loadings": Immutable.Map {
    "overview": false,
    "support-volume": false,
    "resolution-time": false,
    "first-response-time": false,
  },
  "stats": Immutable.Map {
    "overview": Immutable.Map {
      "meta": Immutable.Map {
        "previous_end_datetime": "2019-05-25T00:00:00-05:00",
        "previous_start_datetime": "2019-05-18T00:00:01-05:00",
        "end_datetime": "2019-05-31T23:59:59-05:00",
        "start_datetime": "2019-05-25T00:00:00-05:00",
      },
      "label": "First response time (percentiles)",
      "legend": Immutable.Map {
        "axes": Immutable.Map {
          "x": "",
          "y": "First response time",
        },
      },
      "data": Immutable.Map {
        "axes": Immutable.Map {
          "x": Immutable.List [
            1558760400,
            1558846800,
            1558933200,
            1559019600,
            1559106000,
            1559192400,
            1559278800,
          ],
          "y": Immutable.List [],
        },
        "lines": Immutable.List [
          Immutable.Map {
            "name": "50%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              44772,
              0,
            ],
          },
          Immutable.Map {
            "name": "90%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              80567,
              0,
            ],
          },
        ],
      },
    },
    "support-volume": Immutable.Map {
      "meta": Immutable.Map {
        "previous_end_datetime": "2019-05-25T00:00:00-05:00",
        "previous_start_datetime": "2019-05-18T00:00:01-05:00",
        "end_datetime": "2019-05-31T23:59:59-05:00",
        "start_datetime": "2019-05-25T00:00:00-05:00",
      },
      "label": "First response time (percentiles)",
      "legend": Immutable.Map {
        "axes": Immutable.Map {
          "x": "",
          "y": "First response time",
        },
      },
      "data": Immutable.Map {
        "axes": Immutable.Map {
          "x": Immutable.List [
            1558760400,
            1558846800,
            1558933200,
            1559019600,
            1559106000,
            1559192400,
            1559278800,
          ],
          "y": Immutable.List [],
        },
        "lines": Immutable.List [
          Immutable.Map {
            "name": "50%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              44772,
              0,
            ],
          },
          Immutable.Map {
            "name": "90%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              80567,
              0,
            ],
          },
        ],
      },
    },
    "resolution-time": Immutable.Map {
      "meta": Immutable.Map {
        "previous_end_datetime": "2019-05-25T00:00:00-05:00",
        "previous_start_datetime": "2019-05-18T00:00:01-05:00",
        "end_datetime": "2019-05-31T23:59:59-05:00",
        "start_datetime": "2019-05-25T00:00:00-05:00",
      },
      "label": "First response time (percentiles)",
      "legend": Immutable.Map {
        "axes": Immutable.Map {
          "x": "",
          "y": "First response time",
        },
      },
      "data": Immutable.Map {
        "axes": Immutable.Map {
          "x": Immutable.List [
            1558760400,
            1558846800,
            1558933200,
            1559019600,
            1559106000,
            1559192400,
            1559278800,
          ],
          "y": Immutable.List [],
        },
        "lines": Immutable.List [
          Immutable.Map {
            "name": "50%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              44772,
              0,
            ],
          },
          Immutable.Map {
            "name": "90%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              80567,
              0,
            ],
          },
        ],
      },
    },
    "first-response-time": Immutable.Map {
      "meta": Immutable.Map {
        "previous_end_datetime": "2019-05-25T00:00:00-05:00",
        "previous_start_datetime": "2019-05-18T00:00:01-05:00",
        "end_datetime": "2019-05-31T23:59:59-05:00",
        "start_datetime": "2019-05-25T00:00:00-05:00",
      },
      "label": "First response time (percentiles)",
      "legend": Immutable.Map {
        "axes": Immutable.Map {
          "x": "",
          "y": "First response time",
        },
      },
      "data": Immutable.Map {
        "axes": Immutable.Map {
          "x": Immutable.List [
            1558760400,
            1558846800,
            1558933200,
            1559019600,
            1559106000,
            1559192400,
            1559278800,
          ],
          "y": Immutable.List [],
        },
        "lines": Immutable.List [
          Immutable.Map {
            "name": "50%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              44772,
              0,
            ],
          },
          Immutable.Map {
            "name": "90%",
            "data": Immutable.List [
              0,
              0,
              0,
              0,
              1563,
              80567,
              0,
            ],
          },
        ],
      },
    },
  },
}
`;

exports[`<Stats/> componentDidMount() should fetch stats and populate the state: should contain loading stats 1`] = `
Object {
  "loadings": Immutable.Map {
    "overview": true,
    "support-volume": true,
    "resolution-time": true,
    "first-response-time": true,
  },
  "stats": Immutable.Map {},
}
`;

exports[`<Stats/> render() should not render stats because there is no stat to render and it's not fetching stats 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "padding": 0,
    }
  }
/>
`;

exports[`<Stats/> render() should render stats 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div
    key="3"
    style={
      Object {
        "padding": "30px",
      }
    }
  >
    <Connect(Stat)
      config={
        Immutable.Map {
          "helpText": "The time between the first message from a customer
                   and the first response from an agent. Messages sent by rules are not taken into account.",
          "style": "line",
          "downloadable": true,
          "lines": Immutable.Map {
            "50%": Immutable.Map {
              "label": "median",
              "backgroundColor": "#8892f2",
              "borderWidth": 0,
              "borderColor": "#8892f2",
            },
            "90%": Immutable.Map {
              "label": "95%",
              "backgroundColor": "#ff6b80",
              "borderWidth": 0,
              "borderColor": "#ff6b80",
            },
          },
          "options": [Function],
        }
      }
      data={
        Immutable.Map {
          "label": "First response time (percentiles)",
          "legend": Immutable.Map {
            "axes": Immutable.Map {
              "x": "",
              "y": "First response time",
            },
          },
          "data": Immutable.Map {
            "axes": Immutable.Map {
              "x": Immutable.List [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": Immutable.List [],
            },
            "lines": Immutable.List [
              Immutable.Map {
                "name": "50%",
                "data": Immutable.List [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
              },
              Immutable.Map {
                "name": "90%",
                "data": Immutable.List [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
              },
            ],
          },
        }
      }
      filters={
        Immutable.Map {
          "period": Immutable.Map {
            "start_datetime": "2019-03-09",
            "end_datetime": "2019-03-10",
          },
        }
      }
      meta={
        Immutable.Map {
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        }
      }
      name="first-response-time"
    />
  </div>
</div>
`;

exports[`<Stats/> render() should render stats as loading 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div
    key="0"
    style={
      Object {
        "padding": "0 0 30px",
      }
    }
  >
    <Connect(Stat)
      config={
        Immutable.Map {
          "style": "key-metrics",
          "metrics": Immutable.Map {
            "total_new_tickets": Immutable.Map {
              "label": "Tickets created",
              "tooltip": "Number of tickets created.",
            },
            "total_replied_tickets": Immutable.Map {
              "label": "Tickets replied",
              "tooltip": "Number of tickets replied by agents.",
            },
            "total_closed_tickets": Immutable.Map {
              "label": "Tickets closed",
              "tooltip": "Number of tickets closed. If a ticket was closed multiple times, we only take into account the last time it was closed.",
            },
            "total_messages_sent": Immutable.Map {
              "tooltip": "Number of messages sent by agents and rules.",
              "label": "Messages sent",
            },
            "total_messages_received": Immutable.Map {
              "tooltip": "Number of messages received from customers.",
              "label": "Messages received",
            },
            "median_first_response_time": Immutable.Map {
              "tooltip": "The time between the first message from a customer and the first response from an agent.
                 Messages sent by rules are not taken into account. (median)",
              "label": "First response time",
            },
            "median_resolution_time": Immutable.Map {
              "tooltip": "The time between the first message from a customer and the moment the ticket
                   has been closed by an agent or a rule. Only tickets with at least one response
                   from an agent or a rule are taken into account. (median)",
              "label": "Resolution time",
            },
            "total_one_touch_tickets": Immutable.Map {
              "tooltip": "Percentage of tickets closed with only one response from an agent or a rule.",
              "label": "One-touch tickets",
            },
          },
        }
      }
      filters={
        Immutable.Map {
          "period": Immutable.Map {
            "start_datetime": "2019-03-09",
            "end_datetime": "2019-03-10",
          },
        }
      }
      isLoading={true}
      name="overview"
    />
  </div>
  <div
    key="1"
    style={
      Object {
        "padding": "30px",
      }
    }
  >
    <Connect(Stat)
      config={
        Immutable.Map {
          "helpText": "Number of tickets created, replied by agents and closed.",
          "style": "bar",
          "downloadable": true,
          "lines": Immutable.Map {
            "created": Immutable.Map {
              "label": "Ticket created",
              "color": "#ffb584",
            },
            "replied": Immutable.Map {
              "label": "Ticket replied",
              "color": "#8892f2",
            },
            "closed": Immutable.Map {
              "label": "Ticket closed",
              "color": "#a5e5ab",
            },
          },
          "options": [Function],
        }
      }
      filters={
        Immutable.Map {
          "period": Immutable.Map {
            "start_datetime": "2019-03-09",
            "end_datetime": "2019-03-10",
          },
        }
      }
      isLoading={true}
      name="support-volume"
    />
  </div>
  <div
    key="2"
    style={
      Object {
        "padding": "30px",
      }
    }
  >
    <Connect(Stat)
      config={
        Immutable.Map {
          "helpText": "The time between the first message from a customer and the moment the ticket
                   has been closed by an agent or a rule. Only tickets with a least one response
                   from an agent or a rule are taken into account.",
          "style": "line",
          "downloadable": true,
          "lines": Immutable.Map {
            "50%": Immutable.Map {
              "label": "median",
              "backgroundColor": "#ffb584",
              "borderWidth": 0,
              "borderColor": "#ffb584",
            },
            "90%": Immutable.Map {
              "label": "95%",
              "backgroundColor": "#ff6b80",
              "borderWidth": 0,
              "borderColor": "#ff6b80",
            },
          },
          "options": [Function],
        }
      }
      filters={
        Immutable.Map {
          "period": Immutable.Map {
            "start_datetime": "2019-03-09",
            "end_datetime": "2019-03-10",
          },
        }
      }
      isLoading={true}
      name="resolution-time"
    />
  </div>
  <div
    key="3"
    style={
      Object {
        "padding": "30px",
      }
    }
  >
    <Connect(Stat)
      config={
        Immutable.Map {
          "helpText": "The time between the first message from a customer
                   and the first response from an agent. Messages sent by rules are not taken into account.",
          "style": "line",
          "downloadable": true,
          "lines": Immutable.Map {
            "50%": Immutable.Map {
              "label": "median",
              "backgroundColor": "#8892f2",
              "borderWidth": 0,
              "borderColor": "#8892f2",
            },
            "90%": Immutable.Map {
              "label": "95%",
              "backgroundColor": "#ff6b80",
              "borderWidth": 0,
              "borderColor": "#ff6b80",
            },
          },
          "options": [Function],
        }
      }
      filters={
        Immutable.Map {
          "period": Immutable.Map {
            "start_datetime": "2019-03-09",
            "end_datetime": "2019-03-10",
          },
        }
      }
      isLoading={true}
      name="first-response-time"
    />
  </div>
</div>
`;
